# ML_Model

./: AccountDataNote_Auth.csv  Accountnote.py  app.py  classify.pkl  modelTraining.ipynb  pyproject.toml
